--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="abrir">Abrir</string>
     <string name="fechar">Fechar</string>
+    <string name="gerar">Gerar</string>
+    <string name="cancelar">Cancelar</string>
 
 </resources>
