evolucao fragmentDialog. interface OnOptionsItemSelected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,10 @@
     <string name="fechar">Fechar</string>
     <string name="gerar">Gerar</string>
     <string name="cancelar">Cancelar</string>
+    <string name="dialog_title_password_options">Opções de Senha</string>
+    <string name="numeros">Números</string>
+    <string name="minusculas">Letras Minúsculas</string>
+    <string name="maiusculas">Letras Maiúsculas</string>
+    <string name="caracteres_especiais">Caractéres Especiais</string>
 
 </resources>
