--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-- organizar codigo em MainActivity
 - externalizar strings
-- parametrizar senhas com options apropriado, via escolha do usuario.
+ok - parametrizar senhas com options apropriado, via escolha do usuario.
 
